--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     </form>
 
     <p class="register-link">
-      Não tem conta? <a href="cadastro.html">Cadastre-se</a>
+      Não tem conta? <a href="index.html">Cadastre-se</a>
     </p>
   </div>
 
