--- a/inicial.html
+++ b/inicial.html
@@ -13,7 +13,7 @@
         <h1>Biblio</h1>
       </div>
       <div class="nav-buttons">
-        <button class="btn-cadastrar" onclick="window.location.href='cadastro.html'">Cadastrar</button>
+        <button class="btn-cadastrar" onclick="window.location.href='index.html'">Cadastrar</button>
         <button class="btn-login" onclick="window.location.href='login.html'">Login</button>
       </div>
     </nav>
