--- a/perfil.html
+++ b/perfil.html
@@ -25,6 +25,7 @@
       <div class="buttons">
         <button type="submit">Salvar</button>
         <button type="button" id="logoutBtn">Sair</button>
+        <button type="button" id="livrosBtn" onclick="window.location.href='inicial.html'">Livros</button>
         <button type="button" id="listagemBtn" onclick="window.location.href='listagem.html'">Listar</button>
       </div>
       <div id="message" aria-live="polite"></div>
