--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
       <div id="errorMessage" class="error-message" aria-live="polite"></div>
 
       <button type="submit">Login</button>
+      <button type="button" id="btnLivros" style="display:none;" onclick="verificaLoginELivros()">Livros</button>
     </form>
 
     <p class="register-link">
@@ -27,5 +28,23 @@
   </div>
 
   <script src="login.js"></script>
+  <script>
+    function verificaLoginELivros() {
+      const usuarioLogado = localStorage.getItem('usuarioLogado');
+      if (!usuarioLogado) {
+        alert('Você precisa estar logado para acessar a busca de livros.');
+        window.location.href = 'login.html';
+      } else {
+        window.location.href = 'inicial.html';
+      }
+    }
+    // Exibe o botão Livros apenas se estiver logado
+    document.addEventListener('DOMContentLoaded', function() {
+      const usuarioLogado = localStorage.getItem('usuarioLogado');
+      if (usuarioLogado) {
+        document.getElementById('btnLivros').style.display = 'inline-block';
+      }
+    });
+  </script>
 </body>
 </html>
